<resources>
    <string name="app_name">Sportify</string>
    <string name="promo">Найдите спарринг-партнера \n для занятий спортом</string>
    <string name="auth_txt">Уже есть профиль? Войти</string>
    <string name="reg_btn">Зарегистрироваться</string>
    <string name="auth_btn">Войти</string>
    <string name="auth_short_text">Вход</string>
    <string name="reg_txt">Регистрация</string>
    <string name="cancel_txt">Отменить</string>
    <string name="name_txt">Имя</string>
    <string name="lastname_txt">Фамилия</string>
    <string name="age_txt">Возраст</string>
    <string name="email_txt">Электронная почта</string>
    <string name="password_txt">Пароль</string>
    <string name="gender1_btn">Мужчина</string>
    <string name="gender2_btn">Женщина</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_games">Лента</string>
    <string name="title_map">Карта</string>
    <string name="title_my_games">Мои игры</string>
    <string name="title_profile">Профиль</string>
    <string name="image_game">Фото площадки</string>
    <string name="game_participant_tab">Участник</string>
    <string name="game_organizer_tab">Организатор</string>
    <string name="new_game">Новая игра</string>
    <string name="password_validation_error">Пароль должен содержать не менее 6-ти символов</string>
    <string name="name_validation_error">Введите имя</string>
    <string name="phone_validation_error">Введите номер телефона</string>
    <string name="new_game_title">Новая игра</string>
    <string name="location_photo_placeholder"><![CDATA[Загрузите фото площадки, чтобы вас смогли найти другие участники]]></string>
    <string name="address">Адрес</string>
    <string name="people_quantity">Сколько нужно участников</string>
    <string name="people_quantity_desc">Количество игроков</string>
    <string name="game_start_desc">Игра начнётся</string>
    <string name="show_navigation_desc">Построить маршрут</string>
    <string name="call_organizer_desc">Позвонить организатору</string>
    <string name="show_phone">Показывать телефон для связи</string>
    <string name="publish">Опубликовать</string>
    <string name="description">Описание</string>
    <string name="ready">Готово</string>
    <string name="name">Имя</string>
    <string name="phone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="game">Игра</string>
    <string name="take_part">Присоединиться</string>
    <string name="people">Человек</string>
    <string name="canceled_by_organizer">Организатор отменил игру</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="require_field">Обязательное поле</string>
    <string name="people_quantity_error">Больше 1, но меньше 30</string>
    <string name="empty_state_text"><![CDATA[Этот раздел пока что пуст. Срочно подберите себе игру в разделе «Лента»!]]></string>
</resources>
