<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_game_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="2dp"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/new_game_title"
            android:textColor="#FF212121"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/toolbar_drop_shadow"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/location_image_button"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:background="#E4F3FE"
                android:drawableTop="@drawable/ic_photo"
                android:fontFamily="@font/roboto_regular"
                android:paddingBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="40dp"
                android:text="@string/location_photo_placeholder"
                android:textAllCaps="false"
                android:textColor="#44ABFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <!--<LinearLayout-->
            <!--android:id="@+id/new_location_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="162dp"-->
            <!--android:background="#E4F3FE"-->
            <!--android:gravity="center"-->
            <!--android:orientation="vertical"-->
            <!--android:visibility="visible"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent">-->

            <ImageView
                android:id="@+id/new_location_image"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:background="#E4F3FE"
                android:contentDescription="@string/image_game"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--</LinearLayout>-->

            <Spinner
                android:id="@+id/new_game_category_spinner"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="182dp"
                android:autofillHints="Во что хотите сыграть?"
                android:dropDownWidth="match_parent"
                android:paddingEnd="-10dp"
                android:paddingStart="-10dp"
                android:popupTheme="@style/AppTheme.PopupOverlaySpinner"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/new_game_date"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Когда?"
                android:textColor="#61000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_game_category_spinner" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_game_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionNext"
                android:textColorHint="#61000000"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_game_date">

                <com.example.user.sportify.ui.creategame.AutoCompleteTextViewNoFilters
                    android:id="@+id/new_game_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="#FF212121"
                    android:textSize="16sp"
                    app:textAllCaps="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_game_people_quantity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionNext"
                android:textColorHint="#61000000"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_game_address_input">

                <EditText
                    android:id="@+id/new_game_people_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/people_quantity"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="#FF212121"
                    android:textSize="16sp"
                    app:textAllCaps="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_game_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_regular"
                android:imeOptions="actionNext"
                android:textColorHint="#61000000"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_game_people_quantity_input">

                <EditText
                    android:id="@+id/new_game_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/description"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLength="255"
                    android:textColor="#FF212121"
                    android:textSize="16sp"
                    app:textAllCaps="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/new_game_show_phone_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/show_phone"
                android:textColor="#FF212121"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.915"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_game_description_input" />

            <Button
                android:id="@+id/new_game_confirm_button"
                android:layout_width="164dp"
                android:layout_height="36dp"
                android:layout_marginBottom="26dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:background="#FFFFB032"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/publish"
                android:textColor="#FFFFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.942"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_game_show_phone_switch"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/toolbar_drop_shadow" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>