<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginBottom="12dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_layout_bg">

        <ImageView
            android:id="@+id/game_image"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:contentDescription="@string/image_game"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kachalin_football_center" />

        <TextView
            android:id="@+id/game_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Пн, 05 ноября в 14:30"
            android:textColor="#212121"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_image" />

        <TextView
            android:id="@+id/game_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Есть вариант поиграть в субботу час-два на резинке. Думаю 5 на 5 будет оптимально, одеваться по погоде. Подходить удобнее с…"
            android:textColor="#747474"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_date" />

        <TextView
            android:id="@+id/game_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Фрунзенская наб., вл 50"
            android:textColor="#9e9e9e"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_description" />

        <TextView
            android:id="@+id/game_people_quantity"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="3 / 10"
            android:textColor="#FF212121"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/game_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_address" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/people"
            android:textColor="#FF9E9E9E"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/game_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_people_quantity" />

        <Button
            android:id="@+id/game_button"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="82dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_connect_button_active"
            android:elevation="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/take_part"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_address" />

        <TextView
            android:id="@+id/game_chip_category_name"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/category_chip_background"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="Футбол"
            android:textColor="#747474"
            app:layout_constraintEnd_toEndOf="@+id/game_image"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/game_image"
            app:layout_constraintTop_toTopOf="@+id/game_image" />

        <LinearLayout
            android:id="@+id/cancelled_layout"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="60dp"
            android:background="#FF9E9E9E"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="top"
                android:text="@string/canceled_by_organizer"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>